Add updater GUI